fix: too wide images

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,7 @@ img {
 
 .post-pic {
   max-width: 400px;
+  width: 100%;
 }
 
 h1,
